[metadata]
name = langprofiler
version = 0.1.0
author = Your Name
author_email = you@example.com
description = A minimal, standalone tool for profiling LLM agents.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/langprofiler
license_files = LICENSE

[options]
packages = find:
install_requires =
    numpy>=1.21.0
python_requires = >=3.8
